tests/ui/parser/issues/issue-68890.stderr
error: `?` may only modify trait bounds, not lifetime bounds
  --> $DIR/issue-68890.rs:1:11
   |
LL | enum e{A((?'a a+?+l))}
   |           ^

error: expected one of `)`, `+`, or `,`, found `a`
  --> $DIR/issue-68890.rs:1:15
   |
LL | enum e{A((?'a a+?+l))}
   |               ^ expected one of `)`, `+`, or `,`

error: expected item, found `)`
  --> $DIR/issue-68890.rs:1:21
   |
LL | enum e{A((?'a a+?+l))}
   |                     ^ expected item

error: aborting due to 3 previous errors

